--- a/01index.html
+++ b/01index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log In</title>
     <style>
+      body {
+        background: linear-gradient(to left, lightblue, gray);
+        font-family: Arial, Helvetica, sans-serif;
+      }
       .container {
         position: absolute;
         top: 50%;
@@ -12,10 +16,10 @@
         transform: translate(-50%, -50%);
         width: 50%;
         height: 50%;
-        background: linear-gradient(to left, lightblue, gray);
+        border: 1px solid #eeedeb;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
         border-radius: 8px;
-        font-family: Arial, Helvetica, sans-serif;
+        box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3); /* Adjusted shadow */
       }
 
       .success {
@@ -49,7 +53,7 @@
         padding: 10px;
         width: 250px;
         border-radius: 5px;
-        border: none;
+        border: 2px solid gray;
       }
       .valid-check {
         color: green;
@@ -72,18 +76,20 @@
         font-weight: 700;
         text-align: center;
         letter-spacing: 1px;
+        
       }
       .info-footer p {
         color: lightblue;
+        
       }
-      .info-footer span{
+      .info-footer span {
         color: #eeedeb;
       }
       /* MEDIA STYLE */
       @media (max-width: 768px) {
         .container {
-            width: 100%;
-            height: 60%;
+          width: 95%;
+          height: 60%;
         }
       }
     </style>
@@ -140,12 +146,12 @@
         />
         <br /><br />
         <!-- smeneto class na enter-button od back-button -->
-        <button type="submit" class="enter-button">Enter</button> 
+        <button type="submit" class="enter-button">Enter</button>
         <span id="validCheck" class="valid-check">✔</span>
         <span id="message"></span>
       </form>
       <span id="validCheck" class="valid-check">✔</span>
-      <span id="message"></span> 
+      <span id="message"></span>
       <!-- <p style="text-align: center" class="info-footer">
         <b id="info">Info:</b> <i>+389 78 395 246;</i>    
         <b id="mail">E-mail:</b>signdoc.share@gmail.com
