--- a/03SignDoc Share.html
+++ b/03SignDoc Share.html
@@ -7,7 +7,8 @@
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
-        background: linear-gradient(to right, white, lightblue);
+        /* background: linear-gradient(to right, white, lightblue); */
+        background: linear-gradient(to left, lightblue, gray);
 
       }
       /* body {
@@ -446,11 +447,26 @@
         color: gray;
         font-size: 23px;
       }
-      .signature-container{
+      /* .signature-container{
         width: 100%;
         background-color: #fefefe;
         border: 1px solid lightblue;
-      }
+      } */
+
+      .signature-container {
+       width: 100%;
+       height: 100%;
+       position: relative;
+}
+
+       .canvas {
+        width: 100%;
+        height: 100%;
+         display: block;
+  border: 1px solid #fefefe; 
+  background-color: #eeedeb;
+}
+
       .info-footer {
         width: 100%;
         font-size: 20px;
@@ -466,6 +482,7 @@
       .info-footer span {
         color: #eeedeb;
       }
+      
     </style>
   </head>
   <body>
@@ -849,64 +866,139 @@
         .addEventListener("click", openFullscreen);
 
       // Initialize the canvas for signature
-      function initSignatureCanvas() {
-        const canvas = document.getElementById("canvas");
-        const ctx = canvas.getContext("2d");
-        let drawing = false;
-        let lastPos = { x: 0, y: 0 };
+      // function initSignatureCanvas() {
+      //   const canvas = document.getElementById("canvas");
+      //   const ctx = canvas.getContext("2d");
+      //   let drawing = false;
+      //   let lastPos = { x: 0, y: 0 };
 
-        // Поставете ја бојата на потписот во мастило боја (темно сина)
-        ctx.strokeStyle = "#1E3A8A"; // Мастило боја (можете да ја прилагодите според вашите потреби)
+        
+      //   ctx.strokeStyle = "#1E3A8A"; 
 
-        function getMousePos(e) {
-          const rect = canvas.getBoundingClientRect();
-          return { x: e.clientX - rect.left, y: e.clientY - rect.top };
-        }
+      //   function getMousePos(e) {
+      //     const rect = canvas.getBoundingClientRect();
+      //     return { x: e.clientX - rect.left, y: e.clientY - rect.top };
+      //   }
 
-        function getTouchPos(e) {
-          const rect = canvas.getBoundingClientRect();
-          return {
-            x: e.touches[0].clientX - rect.left,
-            y: e.touches[0].clientY - rect.top,
-          };
-        }
+      //   function getTouchPos(e) {
+      //     const rect = canvas.getBoundingClientRect();
+      //     return {
+      //       x: e.touches[0].clientX - rect.left,
+      //       y: e.touches[0].clientY - rect.top,
+      //     };
+      //   }
 
-        canvas.addEventListener("mousedown", (e) => {
-          drawing = true;
-          lastPos = getMousePos(e);
-          ctx.beginPath();
-          ctx.moveTo(lastPos.x, lastPos.y);
-        });
+      //   canvas.addEventListener("mousedown", (e) => {
+      //     drawing = true;
+      //     lastPos = getMousePos(e);
+      //     ctx.beginPath();
+      //     ctx.moveTo(lastPos.x, lastPos.y);
+      //   });
 
-        canvas.addEventListener("mousemove", (e) => {
-          if (!drawing) return;
-          const pos = getMousePos(e);
-          ctx.lineTo(pos.x, pos.y);
-          ctx.stroke();
-          lastPos = pos;
-        });
+      //   canvas.addEventListener("mousemove", (e) => {
+      //     if (!drawing) return;
+      //     const pos = getMousePos(e);
+      //     ctx.lineTo(pos.x, pos.y);
+      //     ctx.stroke();
+      //     lastPos = pos;
+      //   });
 
-        canvas.addEventListener("mouseup", () => (drawing = false));
-        canvas.addEventListener("mouseout", () => (drawing = false));
+      //   canvas.addEventListener("mouseup", () => (drawing = false));
+      //   canvas.addEventListener("mouseout", () => (drawing = false));
 
-        canvas.addEventListener("touchstart", (e) => {
-          drawing = true;
-          lastPos = getTouchPos(e);
-          ctx.beginPath();
-          ctx.moveTo(lastPos.x, lastPos.y);
-        });
+      //   canvas.addEventListener("touchstart", (e) => {
+      //     drawing = true;
+      //     lastPos = getTouchPos(e);
+      //     ctx.beginPath();
+      //     ctx.moveTo(lastPos.x, lastPos.y);
+      //   });
 
-        canvas.addEventListener("touchmove", (e) => {
-          if (!drawing) return;
-          const pos = getTouchPos(e);
-          ctx.lineTo(pos.x, pos.y);
-          ctx.stroke();
-          lastPos = pos;
-        });
+      //   canvas.addEventListener("touchmove", (e) => {
+      //     if (!drawing) return;
+      //     const pos = getTouchPos(e);
+      //     ctx.lineTo(pos.x, pos.y);
+      //     ctx.stroke();
+      //     lastPos = pos;
+      //   });
 
-        canvas.addEventListener("touchend", () => (drawing = false));
-        canvas.addEventListener("touchcancel", () => (drawing = false));
-      }
+      //   canvas.addEventListener("touchend", () => (drawing = false));
+      //   canvas.addEventListener("touchcancel", () => (drawing = false));
+      // }
+      const canvas = document.getElementById('canvas');
+const ctx = canvas.getContext('2d');
+
+//  nov kod za funckija sign 
+// Function to resize the canvas resolution
+function resizeCanvas() {
+  // Set the display size
+  const displayWidth = canvas.clientWidth;
+  const displayHeight = canvas.clientHeight;
+
+  // Update the canvas resolution to match the display size
+  canvas.width = displayWidth;
+  canvas.height = displayHeight;
+
+  // Adjust stroke style and line width if needed
+  ctx.strokeStyle = '#1E3A8A';
+  ctx.lineWidth = 2;
+}
+
+// Call resizeCanvas on load and whenever the window is resized
+resizeCanvas();
+window.addEventListener('resize', resizeCanvas);
+
+// Existing drawing logic
+let drawing = false;
+let lastPos = { x: 0, y: 0 };
+
+function getMousePos(e) {
+  const rect = canvas.getBoundingClientRect();
+  return { x: e.clientX - rect.left, y: e.clientY - rect.top };
+}
+
+function getTouchPos(e) {
+  const rect = canvas.getBoundingClientRect();
+  return {
+    x: e.touches[0].clientX - rect.left,
+    y: e.touches[0].clientY - rect.top,
+  };
+}
+
+canvas.addEventListener("mousedown", (e) => {
+  drawing = true;
+  lastPos = getMousePos(e);
+  ctx.beginPath();
+  ctx.moveTo(lastPos.x, lastPos.y);
+});
+
+canvas.addEventListener("mousemove", (e) => {
+  if (!drawing) return;
+  const pos = getMousePos(e);
+  ctx.lineTo(pos.x, pos.y);
+  ctx.stroke();
+  lastPos = pos;
+});
+
+canvas.addEventListener("mouseup", () => (drawing = false));
+canvas.addEventListener("mouseout", () => (drawing = false));
+
+canvas.addEventListener("touchstart", (e) => {
+  drawing = true;
+  lastPos = getTouchPos(e);
+  ctx.beginPath();
+  ctx.moveTo(lastPos.x, lastPos.y);
+});
+
+canvas.addEventListener("touchmove", (e) => {
+  if (!drawing) return;
+  const pos = getTouchPos(e);
+  ctx.lineTo(pos.x, pos.y);
+  ctx.stroke();
+  lastPos = pos;
+});
+
+canvas.addEventListener("touchend", () => (drawing = false));
+canvas.addEventListener("touchcancel", () => (drawing = false));
 
       // Call the initialization function
       initSignatureCanvas();
