--- a/03SignDoc Share.html
+++ b/03SignDoc Share.html
@@ -325,9 +325,10 @@
       .grid-container {
         position: absolute;
         top: 90%;
-        left: 35%;
+        left: 40%;
         transform: translate(-90%, -50%);
         height: 100%;
+        margin-top: 60px;
       }
 
       .form-row label {
@@ -405,6 +406,8 @@
         left: 50%;
         margin: 0 auto;
         flex-direction: column;
+        margin-top: 60px;
+
       }
       .second-form-row b {
         color: #eeedeb;
