--- a/04Warehouse.html
+++ b/04Warehouse.html
@@ -333,6 +333,23 @@
         width: 100%;
         margin-top: 70px !important;
       }
+      @media (max-width: 768px) {
+        .logout-button {
+          width: 120px;
+          height: 40px;
+          margin-top: 20px !important;
+        }
+        .back-button {
+          width: 120px;
+          height: 40px;
+          margin-top: 20px !important;
+        }
+        .partner-text p{
+            width: 350px;
+            font-size: 15px;
+            margin-top: 20px;
+        }
+      }
     </style>
   </head>
   <body>
