--- a/05Warehouse-pa-kw.html
+++ b/05Warehouse-pa-kw.html
@@ -7,11 +7,11 @@
     <style>
       .button-container {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         align-items: center;
-        gap: 50px;
+        width: 100%;
       }
-      .logout-button {
+      /* .logout-button {
         background-color: white;
         border: 2px solid gray;
         color: red;
@@ -25,9 +25,44 @@
       .logout-button:hover {
         background-color: lightgray;
         color: darkred;
+      } */
+      .logout-button {
+        width: 175px;
+        height: 50px;
+        background-color: red;
+        color: #fefefe;
+        font-size: 17px;
+        border: none;
+        border-radius: 5px;
+        font-weight: 600;
+        margin: 10px;
+        cursor: pointer;
+      }
+      .logout-button:hover {
+        background: linear-gradient(to bottom, red, #eeedeb);
+        color: #fff;
+        cursor: pointer;
+      }
+      .back-button {
+        background-color: white;
+        border: 1.4px solid lightblue;
+        color: lightblue;
+        padding: 10px 20px;
+        margin: 10px;
+        font-size: 18px;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: background-color 0.3s, color 0.3s;
+        width: 150px; /* Fixed width */
+        height: 50px; /* Fixed height */
+        font-weight: 600;
+      }
+      .back-button:hover {
+        background-color: lightblue;
+        color: white;
       }
       .pagination button,
-      .back-button,
+      /* .back-button, */
       .search-button,
       .download-button,
       .edit-button,
@@ -111,13 +146,106 @@
         margin: 10px 0;
         box-sizing: border-box;
       }
+
+      .heading-text h1 {
+        font-size: 65px;
+        color: lightblue;
+        text-align: center;
+        margin-top: 70px !important;
+      }
+      .heading-text span {
+        color: gray;
+      }
+      .styled-pagination-btn {
+        display: flex !important;
+        justify-content: space-between;
+        margin-top: 20px !important;
+      }
+      .first-row input {
+        color: white !important;
+      }
+      .first-row label {
+        color: gray;
+        font-size: 17px;
+        text-align: center;
+        margin-bottom: 0;
+        margin: 5px;
+      }
+      .search-input {
+        width: 230px;
+        font-size: 15px;
+        font-weight: bold !important;
+        padding: 6px 10px;
+        margin-left: 10px;
+        margin-top: 10px;
+      }
+      .second-row label {
+        font-size: 17px;
+        color: gray;
+        margin-left: 10px;
+      }
+      .second-row {
+        margin-top: 30px;
+      }
+      .second-row input {
+        font-size: 15px;
+        font-weight: 600;
+        padding: 6px 10px;
+        /* margin-top: 30px; */
+        margin-left: 6px;
+      }
+      .search-button,
+      .download-button,
+      .edit-button {
+        margin-top: 30px !important;
+      }
+      .styled-row-btns {
+        display: flex !important;
+      }
+      @media (max-width: 768px) {
+        .responsive-btn-container {
+          display: grid !important;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
+        .first-row {
+          display: flex;
+          justify-content: center;
+          text-align: center;
+        }
+        .first-row label {
+          margin-top: 20px;
+          font-size: 20px;
+        }
+        .styled-row-btns {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-top: 10px;
+        }
+        .styled-row-btns button {
+          width: 100%;
+        }
+        .second-row {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 600px;
+        }
+        .second-row input {
+          font-weight: 400;
+        }
+        .second-row span {
+          margin-left: 5px;
+          font-weight: 600;
+          letter-spacing: 1px;
+        }
+      }
     </style>
   </head>
   <body>
     <div class="button-container">
-      <button type="button" onclick="refreshPage()" class="back-button">
-        Refresh
-      </button>
       <button
         type="button"
         onclick="window.location.href='http://192.168.0.102:8082/Home1.html'"
@@ -125,46 +253,76 @@
       >
         Log Out
       </button>
+
+      <button type="button" onclick="refreshPage()" class="back-button">
+        Refresh
+      </button>
     </div>
-    <h1 id="title" style="font-size: 54px; text-align: left">
+
+    <!-- <h1 id="title" style="font-size: 54px; text-align: left">
       <span style="color: lightblue">SignDoc</span>
       <span style="color: darkgray">Warehouse</span>
       <span style="font-size: 12px">™</span>
-    </h1>
-    <div class="button-container">
-      <label> <input type="checkbox" id="paCheckbox" /> PA </label>
-      <label> <input type="checkbox" id="kwCheckbox" /> GBL = KW </label>
-      <label>
+    </h1> -->
+
+    <!-- nov kod -->
+    <div class="heading-text">
+      <h1 id="title">SignDoc <span>Warehouse ™</span></h1>
+    </div>
+
+    <div class="button-container responsive-btn-container">
+      <div class="first-row">
+        <label> <input type="checkbox" id="paCheckbox" /> PA </label>
+        <label> <input type="checkbox" id="kwCheckbox" /> GBL = KW </label>
+        <label>
+          <input
+            type="checkbox"
+            id="belegPosCheckbox"
+            onclick="groupByMaterial()"
+          />
+          Material
+        </label>
         <input
-          type="checkbox"
-          id="belegPosCheckbox"
-          onclick="groupByMaterial()"
+          type="text"
+          id="searchInput"
+          placeholder="Search..."
+          class="search-input"
+          onkeyup="filterData()"
         />
-        Material
-      </label>
-      <input
-        type="text"
-        id="searchInput"
-        placeholder="Search..."
-        class="search-input"
-        onkeyup="filterData()"
-      />
-      <button type="button" onclick="filterData()" class="search-button">
-        Search
-      </button>
-      <button type="button" onclick="downloadData()" class="download-button">
-        Download
-      </button>
-      <button type="button" onclick="showPasswordModal()" class="edit-button">
-        Edit
-      </button>
+      </div>
+
+      <div class="styled-row-btns">
+        <button type="button" onclick="filterData()" class="search-button">
+          Search
+        </button>
+        <button type="button" onclick="downloadData()" class="download-button">
+          Download
+        </button>
+        <button type="button" onclick="showPasswordModal()" class="edit-button">
+          Edit
+        </button>
+      </div>
+
       <div class="button-container">
-        <label>UL: <input type="text" id="ulInput" placeholder="UL" /></label>
-        <label>S: <input type="text" id="sInput" placeholder="S" /></label>
-        <label
-          >Enter your text:
-          <input type="text" id="customTextInput" placeholder="Enter your text"
-        /></label>
+        <!-- added class second-row -->
+        <!-- added span tag on labels -->
+        <div class="second-row">
+          <label
+            ><span>UL:</span> <input type="text" id="ulInput" placeholder="UL"
+          /></label>
+          <label
+            ><span>S:</span> <input type="text" id="sInput" placeholder="S"
+          /></label>
+
+          <label
+            ><span>Enter your text:</span>
+            <input
+              type="text"
+              id="customTextInput"
+              placeholder="Enter your text"
+            />
+          </label>
+        </div>
       </div>
 
       <button
@@ -207,8 +365,8 @@
       </thead>
       <tbody></tbody>
     </table>
-
-    <div class="pagination">
+    <!-- ADDED CLASS styled-pagination-btn -->
+    <div class="pagination styled-pagination-btn">
       <button id="prevPage" onclick="prevPage()" disabled>Previous</button>
       <span id="pageInfo"></span>
       <button id="nextPage" onclick="nextPage()">Next</button>
